@@ -580,7 +580,7 @@ maprrouter (attribute, localpart, origaddr) {
 	do
 		case "$address" in
 		'')	shh=(((error expansion "$localpart")))
-			lappend al $ssh
+			lappend al $shh
 			continue
 			;;
 		esac
@@ -591,7 +591,7 @@ maprrouter (attribute, localpart, origaddr) {
 		[ -n "$defer" ] &&
 		    shh=(((hold "$defer" "$address" $attribute)))
 		defer=''
-		lappend al $ssh
+		lappend al $shh
 	done
 	return $al
 }
